code clean, get rid of sbt