@@ -2,66 +2,289 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.tesobe</groupId>
-    <artifactId>OBP-Adapter_Leumi</artifactId>
+    <artifactId>OBP-Scala-South</artifactId>
     <packaging>jar</packaging>
-    <description>OBP-Adapter_Leumi</description>
+    <description>OBP-Scala-South</description>
     <version>1.0</version>
-    <name>OBP-Adapter_Leumi</name>
+    <name>OBP-Scala-South</name>
     <organization>
         <name>com.tesobe</name>
     </organization>
+    <properties>
+        <scala.version>2.12</scala.version>
+        <scala.compiler>2.12.2</scala.compiler>
+        <akka.version>2.5.1</akka.version>
+        <akka-streams-kafka.version>0.16</akka-streams-kafka.version>
+        <!-- Common plugin settings -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${project.build.sourceEncoding}
+        </project.reporting.outputEncoding>
+        <!-- vscaladoc settings -->
+        <maven.scaladoc.vscaladocVersion>1.2-m1
+        </maven.scaladoc.vscaladocVersion>
+        <vscaladoc.links.liftweb.pathsufix>scaladocs/
+        </vscaladoc.links.liftweb.pathsufix>
+        <vscaladoc.links.liftweb.baseurl>
+            http://scala-tools.org/mvnsites/liftweb
+        </vscaladoc.links.liftweb.baseurl>
+    </properties>
     <repositories>
-    <repository>
-        <id>ArtimaMavenRepository</id>
-        <name>Artima Maven Repository</name>
-        <url>http://repo.artima.com/releases/</url>
-        <layout>default</layout>
-    </repository>
-    <repository>
-        <id>bintrayhseebergermaven</id>
-        <name>bintray-hseeberger-maven</name>
-        <url>https://dl.bintray.com/hseeberger/maven/</url>
-        <layout>default</layout>
-    </repository>
-    <repository>
-        <id>sonatypepublic</id>
-        <name>sonatype-public</name>
-        <url>https://oss.sonatype.org/content/repositories/public/</url>
-        <layout>default</layout>
-    </repository>
-    <repository>
-        <id>sonatypesnapshots</id>
-        <name>sonatype-snapshots</name>
-        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        <layout>default</layout>
-    </repository>
-    <repository>
-        <snapshots>
-        <enabled>false</enabled>
-        </snapshots>
-        <id>bintray-unisay-maven</id>
-        <name>bintray</name>
-        <url>http://dl.bintray.com/unisay/maven</url>
-    </repository>
+        <repository>
+            <id>ArtimaMavenRepository</id>
+            <name>Artima Maven Repository</name>
+            <url>http://repo.artima.com/releases/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>bintrayhseebergermaven</id>
+            <name>bintray-hseeberger-maven</name>
+            <url>https://dl.bintray.com/hseeberger/maven/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>sonatypepublic</id>
+            <name>sonatype-public</name>
+            <url>https://oss.sonatype.org/content/repositories/public/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>sonatypesnapshots</id>
+            <name>sonatype-snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>bintray-unisay-maven</id>
+            <name>bintray</name>
+            <url>http://dl.bintray.com/unisay/maven</url>
+        </repository>
     </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.compiler}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.scala-logging</groupId>
+            <artifactId>scala-logging_${scala.version}</artifactId>
+            <version>3.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-slf4j_${scala.version}</artifactId>
+            <version>2.4.16</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-stream-kafka_${scala.version}</artifactId>
+            <version>${akka-streams-kafka.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-http_${scala.version}</artifactId>
+            <version>10.0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-http-testkit_${scala.version}</artifactId>
+            <version>10.0.9</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sksamuel.avro4s</groupId>
+            <artifactId>avro4s-core_${scala.version}</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>1.8.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.circe</groupId>
+            <artifactId>circe-core_${scala.version}</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.circe</groupId>
+            <artifactId>circe-parser_${scala.version}</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.circe</groupId>
+            <artifactId>circe-generic_${scala.version}</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>de.knutwalker</groupId>
+            <artifactId>akka-stream-circe_${scala.version}</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>de.knutwalker</groupId>
+            <artifactId>akka-stream-json_${scala.version}</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>de.knutwalker</groupId>
+            <artifactId>akka-http-json_${scala.version}</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-stream</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_${scala.version}</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.liftweb</groupId>
+            <artifactId>lift-json_${scala.version}</artifactId>
+            <version>3.1.0-M3</version>
+        </dependency>
+        <dependency>
+            <groupId>net.liftweb</groupId>
+            <artifactId>lift-util_${scala.version}</artifactId>
+            <version>3.1.0-M3</version>
+        </dependency>
+        <dependency>
+            <groupId>co.fs2</groupId>
+            <artifactId>fs2-core_${scala.version}</artifactId>
+            <version>0.9.6</version>
+        </dependency>
+        <dependency>
+            <groupId>co.fs2</groupId>
+            <artifactId>fs2-io_${scala.version}</artifactId>
+            <version>0.9.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>3.10.8</version>
+        </dependency>
+        <dependency>
+            <groupId>net.manub</groupId>
+            <artifactId>scalatest-embedded-kafka-streams_${scala.version}
+            </artifactId>
+            <version>0.14.0</version>
+        </dependency>
+
+    </dependencies>
     <build>
-        <directory>target</directory>
-        <outputDirectory>target/classes</outputDirectory>
-        <finalName>${artifactId}-${version}</finalName>
-        <testOutputDirectory>target/test-classes</testOutputDirectory>
         <sourceDirectory>src/main/scala</sourceDirectory>
         <testSourceDirectory>src/test/scala</testSourceDirectory>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-        </resources>
-        <testResources>
-            <testResource>
-                <directory>src/test/resources</directory>
-            </testResource>
-        </testResources>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.11</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+            <plugin>
+                <!-- enable the scalatest plugin -->
+                <groupId>org.scalatest</groupId>
+                <artifactId>scalatest-maven-plugin</artifactId>
+                <version>1.0</version>
+                <configuration>
+                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                    <forkMode>once</forkMode>
+                    <junitxml>.</junitxml>
+                    <filereports>WDF TestSuite.txt</filereports>
+                    <argLine>-Drun.mode=test -XX:MaxPermSize=128m -Xms512m -Xmx512m</argLine>
+                    <tagsToExclude>code.external</tagsToExclude>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>test</id>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <version>2.15.2</version>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>**/*.scala</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>scala-test-compile</id>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>com.tesobe.obp.Main</mainClass>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>reference.conf</resource>
+                                </transformer>
+                            </transformers>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>pl.project13.maven</groupId>
                 <artifactId>git-commit-id-plugin</artifactId>
@@ -80,128 +303,8 @@
                     <failOnNoGitDirectory>false</failOnNoGitDirectory>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
-    <dependencies>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>2.12.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-slf4j_2.12</artifactId>
-            <version>2.4.16</version>
-        </dependency>
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-stream-kafka_2.12</artifactId>
-            <version>0.16</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sksamuel.avro4s</groupId>
-            <artifactId>avro4s-core_2.12</artifactId>
-            <version>1.6.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.avro</groupId>
-            <artifactId>avro</artifactId>
-            <version>1.8.1</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>io.circe</groupId>
-            <artifactId>circe-core_2.12</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.circe</groupId>
-            <artifactId>circe-parser_2.12</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.circe</groupId>
-            <artifactId>circe-generic_2.12</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>de.knutwalker</groupId>
-            <artifactId>akka-stream-circe_2.12</artifactId>
-            <version>3.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>de.knutwalker</groupId>
-            <artifactId>akka-stream-json_2.12</artifactId>
-            <version>3.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>de.knutwalker</groupId>
-            <artifactId>akka-http-json_2.12</artifactId>
-            <version>3.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-stream</artifactId>
-            <version>2.19.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.12</artifactId>
-            <version>3.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>net.liftweb</groupId>
-            <artifactId>lift-json_2.12</artifactId>
-            <version>3.1.0-M3</version>
-        </dependency>
-        <dependency>
-            <groupId>net.liftweb</groupId>
-            <artifactId>lift-util_2.12</artifactId>
-            <version>3.1.0-M3</version>
-        </dependency>
-        <dependency>
-            <groupId>co.fs2</groupId>
-            <artifactId>fs2-core_2.12</artifactId>
-            <version>0.9.6</version>
-        </dependency>
-        <dependency>
-            <groupId>co.fs2</groupId>
-            <artifactId>fs2-io_2.12</artifactId>
-            <version>0.9.6</version>
-        </dependency>
-        <dependency>
-            <groupId>com.typesafe.scala-logging</groupId>
-            <artifactId>scala-logging_2.12</artifactId>
-            <version>3.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mock-server</groupId>
-            <artifactId>mockserver-netty</artifactId>
-            <version>3.10.8</version>
-        </dependency>
-        <!-- net.manub:scalatest-embedded-kafka-streams_2.12:0.15.02 -->
-        <dependency>
-            <groupId>net.manub</groupId>
-            <artifactId>scalatest-embedded-kafka-streams_2.12</artifactId>
-            <version>0.14.0</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.typesafe.play/play-ahc-ws-standalone_2.12 -->
-        <dependency>
-            <groupId>com.typesafe.play</groupId>
-            <artifactId>play-ahc-ws-standalone_2.12</artifactId>
-            <version>1.0.0-M10</version>
-        </dependency>
-        
-    </dependencies>
 </project>
 
